css/style.css
:root {
    --text-color: #F5F5DC;
    --dark-grey: rgba(255, 255, 255, 0.1);
    --light-grey: rgba(255, 255, 255, 0.05);
    --border-grey: rgba(255, 255, 255, 0.2);
    --subtext: #ffffff73;
    --infotext: #ffffffca;
    --infotextsub: #ffffff89;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
    background-color: #111111;
    display: flex;
    flex-direction: column;
    padding-left: 25%;
    padding-right: 25%;
    font-family: "Sour Gummy", sans-serif;
    font-style: normal;
}
@media only screen and (max-width: 750px) { 
    body {
        padding-left: 10%;
        padding-right: 10%;
    }
}
@media only screen and (max-width: 600px) { 
    body {
        padding-left: 1%;
        padding-right: 1%;
    }
}

a, a:hover, a:focus, a:active, a:link, a:visited {
    color: var(--text-color);
    text-decoration: inherit;
}

/* =============================
*  START OF NAV
*  =============================
*/ 
nav {
    font-size: 1.5rem;
    color: #fff;
    padding: 10px 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 15px 5px 30px 5px;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 20px;
}

.nav-links a {
    color: white;
    text-decoration: none;
    font-size: 1em;
    transition: color 0.3s;
}

.nav-links a:hover {
    color: #4caf50;
    border-bottom: 2px solid #4caf50;
}

/* =============================
*  END OF NAV
*  =============================
*/ 

/* =============================
*  START OF PROFILE CONTAINER
*  =============================
*/ 

.profile-container {
    display: flex;
    flex-direction: column;
    color: var(--text-color);
    align-items: center;
    justify-content: center;
    padding: 2rem;
    border: 2px solid var(--border-grey);
    border-radius: 5px;
}

.profile-container .row {
    display: flex;
    align-self: flex-start;
    justify-content: space-between;
    align-items: center; 
    width: 100%; 
}

.profile-container div span {
    flex: 1;
}


.profile-container .name {
    font-weight: bold;
    font-size: clamp(1rem, 10vw, 2rem); 
}

/* =============================
*  END OF PROFILE CONTAINER
*  =============================
*/ 

/* =============================
*  START OF Contact Me
*  =============================
*/ 
.contact-icon {
    margin-top: 5% !important;
    display: flex;
    flex-direction: column;
    font-size: 4rem;
    align-items: center;
    flex: 1 0 0;
    gap: 5px;
    margin: 5px;
    padding: 5px;
    border-radius: 6px;
    border: 1px solid var(--text-color);
    height: 100%;
    cursor: pointer;
    transition: transform ease-in-out 0.2s;
}

.contact-icon:hover {
    transform: scale(1.05);
    background-color: #232323;
    z-index: 99;
}
.contact-icon span {
    text-align: center;
    font-size: 1.2rem;
}

.contact-info {
    font-size: 1rem !important;
    color: var(--subtext);
}

/* =============================
*  END OF CONTACT ME
*  =============================
*/ 

/* =============================
*  START OF What I work with
*  =============================
*/

.work-with-container {
    margin-top: 50px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    color: var(--text-color);
    padding: 1rem;
}
@media only screen and (max-width: 550px) { 
    .work-with-container {
        grid-template-columns: 1fr;
    }
}
.work-with-container .header {
    grid-column: 1 / -1;
    font-size: 2rem;
    font-weight: bold;
}
.work-with-container > div {
    margin-left: 2%;
    color: var(--infotext);
    font-weight: 800;
    width: 100%;
}
.work-with-container div div {
    color: var(--infotextsub);
    font-weight: 400;
}
.work-with-container div div::before {
    margin-left: 5%;
    content: "▹";
}

.work-with-container div:hover {
    transform: scale(1.05);
}

/* =============================
*  END OF What I work with
*  =============================
*/



/* =============================
*  START OF Project 
*  =============================
*/
.project-container {
    margin-top: 50px;
    padding: 1rem;
}
.project-container .header {
    color: var(--text-color);
    font-weight: bold;
    font-size: 2rem;
}
.card {
    position: relative;
    transform: scale(0.9);
    padding: 0;
    border: 1px solid var(--dark-grey);
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
    background-color: var(--light-grey);
    border-radius: 6px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    cursor: pointer;
}

.card:hover {
    transform: scale(1);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
}

.card-img {
    width: 100%;
    display: block;
    border-radius: 6px 6px 0 0;
}

.card-body {
    position: absolute;
    bottom: 0;
    width: 100%;
    padding: 15px;
    background: rgba(43, 43, 43, 0.7); 
    backdrop-filter: blur(1px); 
    color: white;
    border-radius: 6px;
    text-align: center;
    transition: background 0.3s ease;
}

.card:hover .card-body {
    background: rgba(43, 43, 43, 0.9); 
}
.card-icon {
    margin-bottom: 0px !important;
}
.card-body .card-icon {
    width: 50px;
    height: 50px;
    margin-bottom: 10px;
    border-radius: 50%;
    object-fit: cover;
}

.card-body .card-title {
    font-size: 1.5rem;
    font-weight: bold;
}

.card-body .card-text {
    font-size: 0.9rem;
    margin-bottom: 15px;
}

.card-body .btn {
    padding: 10px 20px;
    font-size: 1rem;
    background-color: var(--primary-color);
    color: #fff;
    border: none;
    border-radius: 4px;
    text-decoration: none;
    transition: background-color 0.3s ease;
}

.card-body .btn:hover {
    background-color: var(--dark-primary);
}
/* ... */

